Tue Aug 31 21:10:23 2010  Tanaka Akira  <akr@fsij.org>

	* ext/pathname/pathname.c (path_exist_p): Pathname#exist? translated
	  from pathname.rb.

Tue Aug 31 17:32:34 2010  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/stubs.c: fix [Bug #3771] "VC++ can't make ext/tk with enabling
	  stubs". Thanks, Akio Tajima [ruby-dev:42159].

Tue Aug 31 03:42:14 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* string.c (tr_setup_table): fix bug in r29146.
	  Initialize table even if cflag is 0; tr_find see whether
	  del is empty or not.

	* string.c (tr_find): nodel can't be NULL; if NULL, it means
	  it is not specified.

Mon Aug 30 21:29:21 2010  Tanaka Akira  <akr@fsij.org>

	* ext/pathname/pathname.c (path_executable_real_p):
	  Pathname#executable_real? translated from pathname.rb.

Mon Aug 30 15:00:13 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* string.c (tr_setup_table): initialize negating table when
	  negating string is given. [ruby-core:31851]

	* string.c (tr_find): add a sentence for the time when
	  target characters include negating one.

	* string.c (rb_str_count): move definition.

Mon Aug 30 07:32:41 2010  Tanaka Akira  <akr@fsij.org>

	* ext/pathname/pathname.c (path_executable_p): Pathname#executable?
	  translated from pathname.rb.

Sun Aug 29 23:54:10 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/rdoc/parser/ruby.rb (RDoc#parse_call_parameters): don't
	  include assignment.  [Bug #3759], [ruby-dev:42154]

	* lib/rdoc/parser/ruby.rb (RDoc#parse_class): ignore non-constant
	  name signleton class.  [Bug #3759], [ruby-dev:42154]

Sun Aug 29 23:25:18 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (rb_get_path_check): clarify error message for
	  ASCII-incompatible path name.

Sun Aug 29 16:02:54 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* common.mk (node_name.inc): remove command option -n and give
	  file as stdin, because IronRuby 1.1 still doesn't support it.
	  So now we can use ir.exe as BASERUBY.
